# comfyui-kivi-nodes

./: .gitignore  GEMINI.md  README.md  __init__.py  frame_extractor.py  loop_crossfade.py  loop_detector.py  pyproject.toml  requirements.txt
core/: concat_frame_extractor.py  frame_extractor.py  loop_crossfade.py  loop_detector.py  video_splitter.py
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
nodes/: __init__.py  frame_extractor.py  loop_crossfade.py  loop_detector.py  video_extractors.py  video_splitter.py
tests/: test_loop_detector.py
utils/: common.py  utils.py
